--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ "main" ] # 如果您的主分支是 master，請改為 master
+    branches: [ "main" ] # 如果您的主分支名稱是 master，請改為 master
 
 permissions:
   contents: read
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Node
-        uses: actions/node-setup@v4
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
